--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,8 +1,8 @@
 pipeline {
-    agent any
+    agent any   //Пайплайн выполняется на локальных и удалённых машинах
 
     environment {
-        IMAGE_NAME = 'CI-CD-test'
+        IMAGE_NAME = 'CI-CD-test'   //Имя докер-контейнера, -образа.
         DOCKER_IMAGE = 'CI-CD-test:latest'
         PORT = '8080' // Порт для использования контейнером
     }
@@ -10,16 +10,14 @@ pipeline {
     stages {
         stage('Checkout') {
             steps {
-                // Клонируем репозиторий
-                git branch: 'main', url: 'https://github.com/egordmitriev-creator/helloWorld'
+                git branch: 'main', url: 'MRando0m/CI-CD-test'  // Клонируем ветку с репозитория
             }
         }
 
         stage('Build Docker Image') {
             steps {
                 script {
-                    // Сборка Docker-образа
-                    sh "docker build -t ${DOCKER_IMAGE} ."
+                    sh "docker build -t ${DOCKER_IMAGE} ."  //Собираем докер-образ
                 }
             }
         }
@@ -27,28 +25,31 @@ pipeline {
         stage('Deploy Docker Container') {
             steps {
                 script {
-                    // Проверяем и останавливаем старый контейнер
+                    // Проверяем запущен ли контейнер, описанный в переиенных окружения
+                    // и если запущен,тогда останавливаем и удаляем 
                     sh """
                         if [ \$(docker ps -aq -f name=${IMAGE_NAME}) ]; then
                             docker stop ${IMAGE_NAME}
                             docker rm ${IMAGE_NAME}
                         fi
                     """
-                    // Освобождаем порт, если он занят
+                    // Проверяем занят ли порт и еслион занят,
+                    // тогда заершаем процессф на порту
                     sh """
                         if ss -tuln | grep :${PORT}; then
                             echo "Port ${PORT} is in use. Freeing it..."
                             fuser -k ${PORT}/tcp || true
                         fi
                     """
-                    // Запускаем новый контейнер
+                    // Запускаем новый контейнер, пробрасывает порт 8181 на порт 80 внутри контейнера
+                    // и указыавем имя образа
                     sh "docker run -d --name ${IMAGE_NAME} -p 8181:80 ${DOCKER_IMAGE}"
                 }
             }
         }
     }
 
-    post {
+    post {  // Описание вывдимых сообщений в случае успешного/неуспешного выполнения пайплайна.
         success {
             echo 'Deployment completed successfully!'
         }
